--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
   "rules": {
     "no-shadow": "off",
     "no-param-reassign": "off",
-    "eol-last": "off"
+    "eol-last": "off",
+    "import/no-unresolved": "off"
   },
   "ignorePatterns": [
     "dist/",
