--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "import/no-unresolved": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "no-return-assign": "off"
   },
   "ignorePatterns": [
     "dist/",
