--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "jest": "^27.0.4",
+    "jest": "25.1.0",
     "jest-canvas-mock": "^2.3.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.2"
